Completed draft of MCE licence limits article

--- a/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
@@ -12,7 +12,7 @@ unlisted: true
 import { LeadText } from '/src/components/LeadText.js';
 import { Button } from '/src/components/Buttons.js';
 
-<LeadText content="With great flexibility come great limitations. Learn how SFMC limits can make or break your marketing operations." />
+<LeadText content="With great flexibility come great limitations. Learn how MCE limits can make or break your marketing operations." />
 
 ## Limits and Guardrails
 
@@ -27,7 +27,7 @@ Salesforce protects clients and themselves using two methods:
 
 Some of those guardrails and limits can be found in the technical documentation (those can be easily changed or extended by Salesforce whenever they feels like it). Some are part of your licence (as not that easy to change attachment).
 
-## Marketing Cloud Licence Limits
+## Marketing Cloud Engagement Licence Limits
 
 Licence limits have enormous impact on every single client. And while there was no change in what is in your contract, half of those limits weren't enforced by Salesforce until early 2024. This lax approach impacted solution architectures and day-to-day practices for years. But that peaceful and full of possibilities world is no more. Let's dive into what changed, how painful it can be for marketing operations on SFMC and how we can adapt.
 
@@ -44,7 +44,7 @@ Users | 5 | 15 | 45 | 100
 
 All of them can be extended with entitlements, if you are willing to pay.
 
-## Marketing Cloud Limit Entitlements
+## Marketing Cloud Engagement Limit Entitlements
 
 Entitlements are paid add-ons that can extend your limits. They are extremely important as (excluding Users) all those thresholds are soft limits. You can go over them and don't even know about it until Salesforce Account Executive invites you to discuss what it means in the money terms.
 
@@ -78,13 +78,17 @@ As you can see - apart from the Contacts - it's not much. Better than nothing, b
 
 :::
 
-Unfortunately, at the moment, there is no increase to licence limits when you purchase additional Business Units. That's especially problematic with low (even for a single Business Unit) Yearly Automation Executions threshold. //TODO IdeaExchagne.
+Unfortunately, at the moment, there is no increase to licence limits when you purchase additional Business Units. That's especially problematic with the low (even for a single Business Unit) [Yearly Automation Executions](#yearly-automation-executions) threshold. //TODO IdeaExchagne.
 
 ## Limit Monitoring and Optimisation
 
 We already know that there are multiple SFMC licence limits that are enforced now. We also know that you can always pay to solve that issue. But in many cases you can minimise the usage (with smaller or bigger impact on your operations). Let's dive into details, limit by limit.
 
 ### Super Messages
+
+Limit | Basic | Pro | Corporate | Enterprise
+-- | -- | -- | -- | --
+Super Messages | 250K | 2.5M | 10M | 150M
 
 Super Messages are the base currency you need for SFMC to pay for engagement touchpoints with your customers. Sending an Email? It will cost you Super Message(s). Loading a Cloud Page? Yep, Super Messages. SMS? Tons of Super Messages. Product Recommendation from Einstein on your e-commerce platform? You know the drill.
 
@@ -99,6 +103,11 @@ But there are even Super Messages costs in your Super Messages cost with Marketi
 
 The fun part? There is no way to track it in the system. You won't find a Digital Wallet known from the Data Cloud. The only option is to ask your Account Executive for reports on Super Message utilization.
 
+:::note You Should Know
+
+Starting 2025 Salesforce will introduce usage monitoring through Ditial Wallet but it will be limited only to a new Marketing Cloud Engagement Plus licence tier that swaps SuperMessages to credits shared with Marketing Cloud on Core. For now, there is no hope on horizon for all standard MCE licences.
+
+:::
 
 While you could try building a custom solution leveraging the Data Views to calculate the usage:
 
@@ -122,7 +131,7 @@ By trimming the data fat and creating more targeted segmentation you can easily 
 
 But there is more! Improving the data quality of your segments will also mean that bigger percentage of the audience will interact with your more targeted message. This will improve your deliverability and help you get the message to the inbox when it really matters - making your Super Message spend work harder for you.
 
-On top of it, you will either way want to clean up your data to also optimise the [Contact](#contacts) licence limit.
+On top of it, you will either way want to clean up your data to also optimise the [Contact licence limit](#contacts).
 
 ##### Channel Splitting
 
@@ -134,7 +143,7 @@ For example, if a customer has an App installed - send a push message instead of
 
 ##### Code Resources
 
-If you are using Cloud Pages for form handling or redirects - switch to [Code Resources](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-architecting-web-solutions.mdx).
+If you are using Cloud Pages for form handling or redirects - switch to [Code Resources](/docs/salesforce/marketing-cloud-engagement/config/code-resource/). They have the same support for AMPScript and SSJS but - unlike Cloud Pages - doesn’t cost any Super Messages when opened. You won’t be able to replace the client-facing pages with them, but they are perfect for running the logic - for free. I covered more about that pattern in my [Web Studio Architecture webinar](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-architecting-web-solutions.mdx).
 
 ##### OOTB Feature Scrutiny
 
@@ -148,7 +157,11 @@ Einstein Web and Email Recommendations are fine for small volumes, but for bigge
 
 ### Contacts
 
-Second classic licence limit in Salesforce Marketing Cloud is the Contact Count. It’s also a soft limit - you can go over it, but it will trigger invite from the Account Executive to talk about additional [Entitlement SKUs](#marketing-cloud-limit-entitlements). The key to this limit is to understand what the Contacts are and how you can get way more of them than you expect.
+Limit | Basic | Pro | Corporate | Enterprise
+-- | -- | -- | -- | --
+Contacts | N/A | 15K | 45K | 500K
+
+Second classic licence limit in Salesforce Marketing Cloud is the Contact Count. It’s also a soft limit - you can go over it, but it will trigger invite from the Account Executive to talk about additional [Entitlement SKUs](#marketing-cloud-engagement-limit-entitlements). The key to this limit is to understand what the Contacts are and how you can get way more of them than you expect.
 
 #### Contact Count Sources
 
@@ -158,8 +171,10 @@ Contact in Marketing Cloud is very broad term covering all records that are bill
 2. Records synchronized through Marketing Cloud Connect from Contact, Lead or User Object.
 3. Records injected into a Journey (for example, from [Salesforce Data Entry](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx#video)).
 4. Records manually imported to All Contacts list (either directly or inidrectly through, for example, import to All Subscribers).
+5. Records added through SMS opt-in keyword.
+6. Records created through form submission handling process.
 
-All those groups are summed up from all Business Units and all [Populations (legacy feature)](https://help.salesforce.com/s/articleView?id=sf.mc_cab_create_a_population.htm&type=5).
+All those groups are summed up from all Business Units.
 
 ####  Contact Count Monitoring
 
@@ -171,7 +186,7 @@ Unfortuntaly, there is no way to get a Contact Count per Business Unit. It is be
 
 There are two, imperfect, workarounds:
 
-1. Whenever you import record to Marketing Cloud through any source, add Business Unit information to a custom Profile Attribute so that you can later retrieve it from [_EnterpriseAttribute Data View](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx).
+1. Whenever you import record to Marketing Cloud through any source, add Business Unit information to a custom Profile Attribute so that you can later retrieve it from [_EnterpriseAttribute Data View](/docs/salesforce/marketing-cloud-engagement/config/system-data-views/#_enterpriseattribute). Of course, it is easier said than done, as not all Contact sources will make this addition easy. However, if you mostly use [Synchronized Data Extensions in Multi-Org setup](/docs/salesforce/marketing-cloud-engagement/config/mcc-integration-patterns/) you should be able to leverage Automation Studio for that enrichment - just keep in mind the edge case of Contact injections coming from [Salesforce Data Entry in Journey Builder](/docs/salesforce/marketing-cloud-engagement/config/webinars/sfmc-webinar-salesforce-data-in-journey-builder.mdx).
 2. Another option - working even for past data - is to match Contacts against [_Job](docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx#_job) or [_BusinessUnitUnsubscribes](docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx#_businessunitunsubscribes) Data Views that are Business Unit specific. Unfortunately it will work only for small subset of records that were sent an email within the last 6 months (in case of job). You may also try leveraging the [Send Logs](docs/salesforce/marketing-cloud-engagement/config/enhanced-send-log.mdx) if you configured them to be Business Unit Specific. However, it’s still a very limited match if you are using multichannel communication.
 
 :::
@@ -186,31 +201,56 @@ The best way to not hit the Contact Count limit is to not load unnecessary conta
 
 When you are integrating Salesforce Marketing Cloud with Salesforce CRM you use Marketing Cloud Connect to define the objects and fields that will be synchronized for your marketing purposes. You have a lot of flexibility when it comes to the scope of sync, but due to object dependencies nearly every single implementation uses Contacts, Users and frequently also Leads.
 
-All three of those objects are automatically impacting your Contact Count licence limit as soon as a record is synchronized. In most cases you don’t need all (or even most) of those records for your marketing. The solution? Marketing Cloud Connect Object Synchronization Configuration where you can configure the Records Collection rules.
+All (and only those) three objects are automatically impacting your Contact Count licence limit as soon as a record is synchronized. In most cases you don’t need all (or even most) of those records for your marketing. The solution? Marketing Cloud Connect Object Synchronization Configuration where you can set the Records Collection rules.
 
-The choice is limited to three options: `All records`, `All records created since [date]` and the lifesaving `All records with [checkbox] equal [boolean]`. With that last feature you can pick a checkbox field that will serve as a flag for deciding whether given record will be synchronized.
+The choice is limited to three options: `All records`, `All records created since [date]` and the lifesaving `All records with [checkbox] equal [boolean]`. With that last feature you can pick a single checkbox field that will serve as a flag for deciding whether a given record will be synchronized.
 
-As long as you can define a business requirements around marketable records (for example, zero Users, records must have email address or mobile phone and leads cannot be converted), you can leverage this feature to manage the amount of billable Contacts, lower the usage of [Data Extension Storage limit](#data-extension-storage) and optimise the performance of all your queries.
+As long as you can define a business requirements around marketable records (for example, don't sync Users, Contacts/Leads must have email address or mobile phone and Leads cannot be converted), you can leverage this feature to manage the amount of billable Contacts, lower the usage of [Data Extension Storage limit](#data-extension-storage) and optimise the performance of all your queries.
 
 :::note You Should Know
 
-not formula
-single checkbox
+The checkbox cannot be a formula - it must be a standard checkbox field. Of course, in most cases, you will want it to be dynamically set using predefined logic. To do this, leverage Apex Trigger or a Flow manage the checkbox state as per the business requirements. And if you are feeling fancy, you can leverage Agentforce in a Flow to set it based on complex adaptive logic.
+
+Additionally, you cannot use multiple checkboxes for MCC filtering - only a single one is supported. So if you have multiple criteria, you will need to consolidate them into a single checkbox field using Apex or Flow.
 
 :::
 
-
-- mcc checkbox logic
-
 2. Manual Imports
+
+Another common source of unnecessary Contacts are manual imports. Whenever you import a file to All Contacts (either directly or through All Subscribers) you will add all those records to your Contact Count. And if you are not careful, you can easily import records that you don’t need for your marketing. For example, temporary email addresses, test records or contacts that have unsubscribed from all communications.
+
+Best practice is to not import records manually and instead leverage the automated ingestion (be it through Marketing Cloud Conenct, Data Cloud Activation, or Automation Studio from non-Salesforce sources). But if you have to do it:
+
+1. Check whether the data to be imported is really needed for your marketing purposes.
+2. Verify whether the data is clean and compliant.
+3. Import records to a Data Extension first, so that you can review and clean the data before it hits All Contacts.
+
+Records stored in Data Extensions do not impact your Contact Count until they are added to All Contacts (for example by triggering Email or SMS Activity). They will, however, impact
 
 ##### Single Subscriber Key
 
-- multiple sources
-- manual imports
-- person accounts
+If you have a Subscriber Key, you are a Billable Contact. If you have multiple Subscriber Keys, you are multiple Billable Contacts. Architect your data model and data ingestion processes to ensure that each individual is represented by a single Subscriber Key.
+
+The key reason for duplicate Contacts is using multiple ingestion sources.
+
+1. Marketing Cloud Connect will use Contact, User and Lead IDs from Salesforce CRM as Subscriber Key - if you are using this integration method, this is the best Subscriber Key you can use.
+2. If you are using Person Accounts in Salesforce CRM, be aware that each Person Account is represented by two records in Salesforce CRM - Contact and Account. Marketing Cloud Connect will synchronize both records to Marketing Cloud. Non-billable (Person) Account and (billable) Contact. Be sure to use Person Contact ID as your sendable Subscriber Key - otherwise you will end up with duplicate Contacts (one for Person Account and one for Person Contact) and encoutner issues with Marketing Cloud Conenct related features (like Salesforce Data Entry in Journey Builder or Individual Email Results).
+3. Manual Imports frequently use email address as unique identifier - it's a bad practice as email address can change and is not unique. If you have Salesforce CRM, upload those records there to get CRM IDs as Subscriber Keys. If you use other solutions, pick a unique, non-changing identifier used across your business systems (like customer ID).
+4. Align your Automation Studio based imports with the above practices to make sure you are not using mix of different identifiers for Subscriber Key.
+5. When working with form submissions or SMS Keyword registrations, be sure to match or create those records in your databse of record (for example, handle the form submission in a way that will first check if the contact exists in your CRM and create it if not before pushing it into a Journey) to limit duplicates and various Subscriber Key types.
+6. Do the same for API integrations - especially Triggered Sends - otherwise you will have silent Contact Count growth that will be hard to pinpoint.
+
+Be sure to regularly review your All Contacts records and, if you find any issues, check all your ingestion processes to ensure that you are not creating duplicate Contacts.
+
+:::note You Should Know
+
+A neat way to do it is to leverage the [Mobile List export trick](/docs/salesforce/marketing-cloud-engagement/config/contact-deletion/#leads-and-users-deleted-or-filtered-in-salesforce-crm) to get All Contacts and identify counts of different SubscriberKey types using [SQL LIKE operator](/docs/salesforce/marketing-cloud-engagement/sql/sql-like/#-operator-1).
+
+:::
 
 ##### Contact Data Retention
+
+Finally, you should always manage your Contact Count by regularly deleting contacts that are no longer needed for your marketing goals. Find records with invalid Subscriber keys, missing channel information, hard bounces, long lasting lack of engagement and remove them from your database to keep it clean and lean. It will help with licence costs, platform performance and deliverability. Learn more about proper contact deletion and use ready-to-use script in my full guide:
 
 <Button link='docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx'
  text='SFMC Contact Deletion Guide'
@@ -219,10 +259,159 @@ single checkbox
 
 ### Data Extension Storage
 
+Limit | Basic | Pro | Corporate | Enterprise
+-- | -- | -- | -- | --
+Data Extension Storage | 1GB | 15GB | 45GB | 100GB
+
+Another important license limit in Marketing Cloud is the Data Extension Storage. It's also a soft limit, meaning that you can exceed it, but it may incur additional costs. There are a couple of things you can do to manage this limit.
+
+#### Data Extension Design
+
+Start with proper Data Extension design. Avoid using unnecessary fields, especially large text fields.
+
+For every field in your Data Extension, ask yourself:
+
+1. Is this data already available in another existing Data Extension?
+2. Do I really need this field?
+3. How often will I use this field?
+4. For long text fields - can I store this data somewhere else and pull it when it's needed via API?
+
+The best way to protect your Marketing Cloud Engagement from storage bloat is to not create space to store that data in the first place.
+
+#### Data Extension Data Retention
+
+Once you define the data that is necessary, manage its storage by implementing a data retention policy on (nearly) all your data extensions. Make configuring it the must-have step in your data extension creation process. There are very few use cases that will require you to keep data longer than 2 years. Most of the time you can go for 6 months or even 3 months retention period. Even for segmentation purposes.
+
+Not only it will help you with the Data Extension Storage limit, but it will also improve the performance of your queries and other operations on those data extensions. It's also great way to ensure compliance with data protection regulations.
+
+Salesforce provided a great tool to help you with that - [Data Extension Storage Usage Report](https://help.salesforce.com/s/articleView?id=mktg.mc_as_data_extension_storage.htm&type=5). It provides you with a sneak peek into your current Data Extension usage in Setup » Administration » Data Management » Data Extension Storage and a detailed downloadable report in CSV format directly in Setup Home.
+
+That report is extremely useful as it will help you identify the largest data extensions in your system (Data Extension Name and Customer Key along with its Business Unit details). It provides both the actual size of the data stored as well as information about the Data Retention Policy (if any) configured on the data extension. Perfect way to identify data extensions that are not following best practices and are the best candidates for optimisation - ordered by impact on your Data Extension Storage limit.
+
+:::note You Should Know
+
+The same report is also showing you whether the Data Extension was set as Sendable or not. This is crucial information for [Contact Deletion process](/docs/salesforce/marketing-cloud-engagement/config/contact-deletion/) as only Contacts in sendable Data Extension are removed with it. Contact data in non-sendable Data Extensions will stay in the system and impact both Data Extension Storage and your compliance. Data Retention Policy to the resque!
+
+:::
+
+#### Data Extension Export & Archive
+
+Most companies are very attached to the data they collect. And rightly so - data is the new oil. But not all data is needed in the marketing platform all the time. Frequently you can archive older data that you still see as valuable but is not needed for day-to-day operations and keep it in a cheaper storage (like your Data Warehouse of choice).
+
+You can easily export data from Data Extensions using Automation Studio and store it in an external system (like [AWS S3](https://help.salesforce.com/s/articleView?id=mktg.mc_overview_set_up_amazon_s3_location.htm&type=5), [Azure Blob Storage](https://help.salesforce.com/s/articleView?id=mktg.mc_overview_set_up_microsoft_azure_location.htm&type=5) or [Google Cloud Storage](https://help.salesforce.com/s/articleView?id=mktg.mc_overview_set_up_google_cloud_location.htm&type=5)). You can then delete the data from Marketing Cloud to free up space. If you need it back, you can always re-import it.
+
+There are out-of-the-box activities in Automation Studio to help you with that - [Data Extract Activity](https://help.salesforce.com/s/articleView?id=mktg.mc_as_use_a_data_extract_activity.htm&type=5) to export the data and [File Transfer Activity](https://help.salesforce.com/s/articleView?id=mktg.mc_as_using_the_file_transfer_activity.htm&type=5) to move the file to an external FTP server.
+
+:::note You Should Know
+
+If you are integrated with Salesforce CRM, you can also consider 3rd party solution [Marketing Cloud Connect Toolbox](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N4V00000J6QDbUAN) to automate data exports in a way that will make that information easily available directly in your Salesforce CRM objects without impact on the Storage limits of CRM and Marketing Cloud Engagement. Perfect for archiving old campaign engagement and consent data.
+
+:::
+
 ### Yearly Automation Executions
 
-"Automations are measured via the number of times a single automation is run, regardless of the number of actual steps or activities within the automation. For example, an automated program that includes five steps with seven activities counts as just one automation each time the program is run."
+Limit | Basic | Pro | Corporate | Enterprise
+-- | -- | -- | -- | --
+Yearly Automation Executions | 0 | 15K | 45K | 100K
+
+The most painful licence limit in Marketing Cloud Engagement is the Yearly Automation Executions. This limit defines how many times you can run automations in Automation Studio within a year. It's a soft limit, meaning that you can exceed it, but it may incur additional costs.
+
+Why it is so painful? Because it is absurdly small for real life usage. Let's say you have a single automation that runs every hour (for example to pull current CRM data from Synchronized Data Extensions). That's 24 runs per day, 720 runs per month and 8,760 runs per year. That single automation already burns half of the Pro licence limit. And that's before any segmentation.
+
+Keep in mind that just recently Salesforce finally caved and gave us more frequent Automation schedule - every 15 minutes - so that we can get closer to real-time data. But that means that a single automation running every 15 minutes will run 35,040 times per year. Single automation, nearly whole Corporate licence limit. Again, before any segmentation.
+
+Even with the highest Enterprise licence limit of 100k yearly exections, you can run only 11 hourly automations before hitting the limit. And currently that limit is shared across all Business Units in your Marketing Cloud Engagement instance.
+
+#### Automation Execution Monitoring
+
+Salesforce gave us with two ways to monitor the Automation Executions usage. Both are bad.
+
+##### Automation Studio History
+
+The user friendly way is to check History tab in the Automation Studio. It provides a clean dashboard with Automation and Activity success rates, execution history and some details. It's really nice place to get Automation Studio health overview at a glance - see issues and plan optimisations.
+
+You can also leverage it to monitor the Automation Execution usage, but it's far from perfect. You will need to manually sum the executions by Automation Success Rate Status but - what is worse - you can look only at the 7 day period at a time. Not very user friendly for yearly monitoring.
+
+##### Automation Studio Data Views
+
+Another option to view executions is to leverage the [_AutomationInstance Data View](/docs/salesforce/marketing-cloud-engagement/config/system-data-views/#_automationinstance). It provides you with all the details about each automation run, including its status, start and end time, and Business Unit.
+
+The good part? You can capture 6 months of data at once.
+
+The bad part?
+1. You will need to use SQL query to count the executions. [Query Studio](/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions/#query-studio) is your friend here.
+2. There is only 6 months of data available, so you will need to store the results somewhere else to get a full year overview. [External Data Warehouse](#data-extension-export--archive) perhaps?
+
+#### Automation Execution Optimizations
+
+There are few ways to optimise your Automation Executions usage, but - spoiler alert - neither is perfect.
+
+##### Optimise Schedule
+
+The easiest way to lower the number of Automation Executions is to review the schedule of your automations and make sure they are not running more frequently than necessary. For example, if you have an automation that runs every hour but the data it processes is updated only once a day, you can change the schedule to run daily instead of hourly.
+
+This step is a must-have in your optimisation process, but it will get you only so far. Most of the time you will need to go deeper.
+
+##### Combining Automations
+
+The limit is measured per automation run, not per step or activity within the automation. This means that you can combine multiple automations into a single one to reduce the number of executions. For example, if you have ten automations that run every hour, you could combine them into a single automation and save 90k executions per year.
+
+Sounds easy, right? Well, not really. Combining automations can lead to complex and hard-to-maintain automations. You will also need to ensure that the combined automation can handle failures gracefully and that neither step exceeds the 30-minute execution time limit. Any failure in a single step will cause the entire automation to fail, which can lead to missed data updates or other issues.
+
+##### External Processing
+
+Another option is to move some of the processing outside of Marketing Cloud Engagement. This way you can limit your transformation and processing in Automation Studio to only what is necessary for Marketing Cloud Engagement and do the rest in a more suitable environment (like your Data Warehouse or a dedicated ETL tool). Additionally you can consider using direct Journey triggers (via API, Salesforce Data Entry or Data Cloud activation) to limit the need for segmentation with Automation Studio.
+
+This approach can significantly reduce the number of Automation Executions, but it requires additional infrastructure and leads to a question why you are paying for Marketing Cloud Engagement if you are not using its core capabilities and treat it as a simple sending engine.
+
+##### External Activity Triggers
+
+Finally, you can fight stupid limit with a stupid solution. As the limit is measured per automation run, not activity run, and you are able to trigger activities directly, you can trigger them from your external system. Setup a simple CRON job that will call the specific chain of activities you need at the time you need them.
+
+:::note You Should Know
+
+You can also hit two birds with one stone and leverage a 3rd Party [DESelect Segment](https://deselect.com/segment/) or [Activation Studio](https://activation-studio.com) to get a really clean drag & drop segmentation soltion that will do the triggering for you. Both solutions have their own scheduling capabilities that will trigger the activities directly, bypassing the need for Automation Studio run.
+
+For companies with big segmentation needs the cost of those tools might be smaller than the cost of additional Automation Executions entitlements. And you will get a user friendly segmentation tool that will empower your marketing team as a bonus.
+
+:::
 
 ### Yearly API Calls
 
+Limit | Basic | Pro | Corporate | Enterprise
+-- | -- | -- | -- | --
+Yearly API Calls | 0 | 2M | 6M | 200M
+
+The last soft limit of Marketing Cloud Engagement licence is related to API usage. It defines how many API calls you can make to Marketing Cloud Engagement within a year. As with previous, you can exceed it, but it may incur additional costs.
+
+The good part about this limit is that it's quite high for most use cases. Even the Pro licence with 2M yearly API calls should be sufficient for small to medium-sized businesses. The Enterprise licence with 200M yearly API calls is suitable for large enterprises with high API usage.
+
+#### API Call Monitoring
+
+Currently there is no way to monitor the API call usage directly in Marketing Cloud Engagement. You will need to ask your Account Executive for reports on API call usage (or just wait for them to come to you).
+
+#### API Call Optimizations
+
+##### Verify Necessity
+
+First and foremost, verify whether all the API calls you are making are necessary. Are there any redundant calls that can be eliminated? Can those calls be changed into SFTP uploads? Limiting the calls is the easiest way to lower the usage, but unfortunately, due to lack of monitoring, it's hard to identify the low-hanging fruit.
+
+##### Leverage Built-in Features
+
+While API calls are counted against the limit, the built-in features of Marketing Cloud Engagement are not. So whenever possible, leverage the built-in features instead of custom API integrations. For example, use Marketing Cloud Connect for Salesforce CRM integration or Data Cloud Activations instead of building your own API-based integration. Leveraging AMPScript and SSJS to pull the data you need instead of using API calls might be another option.
+
+##### Use Bulk Endpoints
+
+When you need to make API calls, use the batch options whenever possible. Instead of making multiple individual Data Extension rows insertions, leverage [Data Extension Rows Asynchronous API](https://developer.salesforce.com/docs/marketing/marketing-cloud/references/mc-data_extension_rows_async).
+
+And if you need to push even more data via API, consider using [Bulk Data Ingest API](https://developer.salesforce.com/docs/marketing/marketing-cloud/guide/bulkdataingestion.html) that is designed for high-volume data operations.
+
 ### Users
+
+Limit | Basic | Pro | Corporate | Enterprise
+-- | -- | -- | -- | --
+Users | 5 | 15 | 45 | 100
+
+The user limit is the only hard limit of the bunch. It defines the maximum number of active users that can have in your account. You can increase this limit by purchasing additional entitlements.
+
+Optimisation? Not much you can do here. Just be sure to regularly review your user list and remove any inactive or unnecessary users to free up licenses for new team members (something you should be doing anyway for security reasons).
